--- a/src/styles/single-item-page/checkout/_checkout-menu.scss
+++ b/src/styles/single-item-page/checkout/_checkout-menu.scss
@@ -1,4 +1,5 @@
 .checkout-menu-container {
+  border: 1px solid orangered;
   position: absolute;
   top: 0;
   right: 0;
@@ -125,7 +126,8 @@
     padding: 2rem;
 
     &--price,
-    &--shipping {
+    &--shipping,
+    &--final-total-price {
       display: flex;
       justify-content: space-between;
       padding: 2rem 0;
@@ -156,6 +158,13 @@
     &--continue-to-checkout-button {
       margin-top: 2rem;
       text-align: center;
+    }
+
+    &--final-total-price {
+      font-size: 1.5rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      border-top: 1px solid $color-grey-light-2;
     }
   }
 }
